--- a/src/index.html
+++ b/src/index.html
@@ -1,46 +1,68 @@
 <!doctype html>
-<html ng-app="auth">
-  <head>
-    <meta charset="utf-8">
-    <title>auth</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<html ng-app="myAppDev">
+<head>
+<meta charset="utf-8">
+<title>auth</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width">
+<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- run `gulp inject` to automatically populate bower styles dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
+<!-- build:css({.tmp/serve,src}) styles/vendor.css -->
+<link rel="stylesheet" href="freeue.css">
+<!-- bower:css -->
+<!-- run `gulp inject` to automatically populate bower styles dependencies -->
+<!-- endbower -->
+<!-- endbuild -->
 
-    <!-- build:css({.tmp/serve,src}) styles/app.css -->
-    <!-- inject:css -->
-    <!-- css files will be automatically insert here -->
-    <!-- endinject -->
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
+<!-- build:css({.tmp/serve,src}) styles/app.css -->
+<!-- inject:css -->
+<!-- css files will be automatically insert here -->
+<!-- endinject -->
+<!-- endbuild -->
+</head>
+<body>
+	<header style="background-color: white; margin-bottom: 8px;">
+		<div class="mala-clearfix mala-container" style="width: 100%;">
+			<!--=============================右侧的个人中心================-->
+			<a href="/crm" class="mala-logo mala-fl"
+				style="font-size: 25px; color: #0C0C0C;"></a>
+			<div class="mala-user-info mala-fr js-header-dropmenu"
+				style="width: 450px">
+
+				<span class="mala-username"><i
+					class="glyphicon glyphicon-volume-up"
+					style="color: #ff8c03; font-size: 13px;">提示：本页数据每天04:00更新</i></span> <span
+					class="mala-username" id="personInfo">admin<i
+					class="mala-arrow mala-arrow-down  mala-ml"></i>
+				</span> <a class="mala-username"
+					href="http://tiyan.xiaojukeji.com/crm/user/logout">退出</a>
+			</div>
+		</div>
+	</header>
+	<div>
+		<acme-navbar></acme-navbar>
+	</div>
+	<!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-view></div>
+	<div ng-view class="mala-content"></div>
 
-    <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp inject` to automatically populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
+	<!-- build:js(src) scripts/vendor.js -->
+	<!-- bower:js -->
+	<!-- run `gulp inject` to automatically populate bower script dependencies -->
+	<!-- endbower -->
+	<!-- endbuild -->
 
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
+	<!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
+	<!-- inject:js -->
+	<!-- js files will be automatically insert here -->
+	<!-- endinject -->
 
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
+	<!-- inject:partials -->
+	<!-- angular templates will be automatically converted in js and inserted here -->
+	<!-- endinject -->
+	<!-- endbuild -->
 
-  </body>
+</body>
 </html>
