--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
 <link rel="stylesheet" href="freeue.css">
+<script src="assets/js/echarts-all.js"></script>
 <!-- bower:css -->
 <!-- run `gulp inject` to automatically populate bower styles dependencies -->
 <!-- endbower -->
@@ -46,7 +47,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-	<div ng-view class="mala-content"></div>
+	<div ng-view></div>
 
 	<!-- build:js(src) scripts/vendor.js -->
 	<!-- bower:js -->
