abstract menu item to config file

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html ng-app="myAppDev">
 <head>
 <meta charset="utf-8">
-<title>auth</title>
+<title>{{ 'TITLE' | translate }}</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+<link type="image/x-icon" href="http://mis.diditaxi.com.cn/static/src/base/imgs/favicon.ico" rel="icon">
 <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
 <link rel="stylesheet" href="freeue.css">
 <script src="assets/js/echarts-all.js"></script>
